k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devlab
  labels:
    name: devlab
    app: devlab-microservice
